--- a/style.css
+++ b/style.css
@@ -194,7 +194,8 @@ h3 {
 
     #foot {
         font-size: 4vw;
-        padding: 10vw;
+        padding: 9%;
+        width: 82%
     }
 
     #copyright {
